--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,7 +1,11 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        from_database:
+            entity:
+                class: App\Entity\User
+                property: username    
+                
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -9,16 +13,21 @@ security:
         main:
             anonymous: true
             lazy: true
-            provider: users_in_memory
+            # provider: users_in_memory
 
             # activate different ways to authenticate
+            # http_basic: true
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
+            form_login : true
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+
+    # encoders :
+       
