--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -13,13 +13,17 @@ security:
         main:
             anonymous: true
             lazy: true
+            logout:
+                path: /logout
+                target: /
             # provider: users_in_memory
 
             # activate different ways to authenticate
             # http_basic: true
             # https://symfony.com/doc/current/security.html#firewalls-authentication
 
-            form_login : true
+            form_login : 
+                check_path : login
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
@@ -29,5 +33,9 @@ security:
         - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
-    # encoders :
+    encoders :
+        App\Entity\User : 
+            algorithm: bcrypt
+            cost: 12
+
        
