--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,9 @@
         "symfony/twig-bundle": "^5.2",
         "symfony/validator": "5.2.*",
         "symfony/web-link": "5.2.*",
+        "symfony/webpack-encore-bundle": "^1.11",
         "symfony/yaml": "5.2.*",
+        "twbs/bootstrap": "5.0.1",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
         "vich/uploader-bundle": "^1.17"
@@ -68,7 +70,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "Cedric\\RecaptchaBundle\\" : "lib/RecaptchaBundle"
         }
     },
     "autoload-dev": {
