Recaptcha, clé à valider

--- a/lib/RecaptchaBundle/Resources/config/services.yaml
+++ b/lib/RecaptchaBundle/Resources/config/services.yaml
@@ -4,3 +4,18 @@ services:
     tags: ['form.type']
     arguments:
       $key: '%recaptcha.key%'
+
+  recaptcha.validator:
+    class: Cedric\RecaptchaBundle\Constraints\RecaptchaValidator
+    tags: ['validator.constraint_validator']
+    autowire: true
+
+  ReCaptcha\ReCaptcha:
+    class: ReCaptcha\ReCaptcha
+    arguments:
+      $secret: '%recaptcha.secret%'
+      $requestMethod: '@ReCaptcha\RequestMethod'
+
+  ReCaptcha\RequestMethod: '@ReCaptcha\RequestMethod\CurlPost'
+  ReCaptcha\RequestMethod\CurlPost: ~
+  
