--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.8",
         "fzaninotto/faker": "^1.9",
+        "google/recaptcha": "1.2",
         "knplabs/knp-paginator-bundle": "^5.4",
         "liip/imagine-bundle": "^2.6",
         "phpdocumentor/reflection-docblock": "^5.2",
